crates-next/otter-vm/tests/compile_fail/root_trace_table_import_rejected.stderr
error[E0425]: cannot find type `TraceTable` in crate `otter_gc`
 --> tests/compile_fail/root_trace_table_import_rejected.rs:2:34
  |
2 |     let _table: Option<otter_gc::TraceTable> = None;
  |                                  ^^^^^^^^^^ help: a trait with a similar name exists: `Traceable`
  |
 ::: $WORKSPACE/crates-next/otter-gc/src/trace.rs
  |
  | pub trait Traceable: 'static {
  | ---------------------------- similarly named trait `Traceable` defined here
